--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ owner:
   facebook: #username
   google:
     plus: #username
-    analytics:
+    analytics: UA-21922961-2
     verify:
     ad-client:
     ad-slot:
