--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 title:            Branch 'n' Bound
 locale:           en_US
-url:
+url: ssarangi.github.io
 
 
 # Jekyll configuration
@@ -74,5 +74,4 @@ owner:
 
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "Gemfile", "Gemfile.lock", "LICENSE", "README.md"]
-gems: [tag_gen]
-plugins: _plugins
+plugins_dir: _plugins
