--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,16 @@ rvm:
 
 before_script:
  - chmod +x ./script/cibuild # or do this locally and commit
+ - uname -a 
+ - cat /etc/lsb-release
+ - sudo apt-get install cabal-install ConteXt
+ - cabal update
+ - cabal install pandoc
+ - export PATH=~/.cabal/bin:$PATH
+
+rvm:
+  - 1.9.3
+script: find ~/.cabal/bin; pandoc -v
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
