--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,9 @@ rvm:
 
 before_script:
  - chmod +x ./script/cibuild # or do this locally and commit
- - uname -a 
- - cat /etc/lsb-release
- - sudo apt-get install cabal-install ConteXt
- - cabal update
- - cabal install pandoc
- - export PATH=~/.cabal/bin:$PATH
+ - sudo apt-get install pandoc ConteXt
 
-script: find ~/.cabal/bin; pandoc -v
+script: pandoc -v
 
 # Assume bundler is being used, therefore
 # the `install` step will run `bundle install` by default.
