--- a/_data/details.yml
+++ b/_data/details.yml
@@ -1,5 +1,5 @@
-- first_name: Satyajit
-  last_name: Sarangi
+- first_name: SATYAJIT
+  last_name: SARANGI
   city: San Jose
   state: CA
   ph: 716-704-8349
