behavior cloning post

--- a/.jekyll-crosspost_to_medium/medium_crossposted.yml
+++ b/.jekyll-crosspost_to_medium/medium_crossposted.yml
@@ -9,3 +9,8 @@
 "/Dominator-Trees/": https://medium.com/@satyajit.sarangi/dominator-trees-implementation-and-why-are-they-needed-68679cdd345
 "/Loopy-Structurizer/": https://medium.com/@satyajit.sarangi/loopy-a-structurizer-for-generating-structured-control-flow-code-6f756210931b
 "/Incremental-Search/": https://medium.com/@satyajit.sarangi/incremental-text-search-using-tries-and-ternary-trees-5614ebf2579b
+"/Luajit-For-Python/": https://medium.com/@satyajit.sarangi/adapting-luajit-for-python-3-78ed64fd4e32
+"/Regular-Expressions/": https://medium.com/@satyajit.sarangi/designing-a-regular-expression-engine-in-python-957e52ccc9b5
+"/ZNode-Javascript-Introspection/": https://medium.com/@satyajit.sarangi/znode-a-javascript-introspection-module-8b6a224018f5
+"/Shaky-Diagrammer/": https://medium.com/@satyajit.sarangi/shaky-diagrammer-ae761c1dbcfa
+"/OpenStreetMapsRendering-and-simple-routing/": https://medium.com/@satyajit.sarangi/openstreetmap-rendering-and-simple-routing-3ebd337bcb1e
