add network details

--- a/.jekyll-crosspost_to_medium/medium_crossposted.yml
+++ b/.jekyll-crosspost_to_medium/medium_crossposted.yml
@@ -14,3 +14,4 @@
 "/ZNode-Javascript-Introspection/": https://medium.com/@satyajit.sarangi/znode-a-javascript-introspection-module-8b6a224018f5
 "/Shaky-Diagrammer/": https://medium.com/@satyajit.sarangi/shaky-diagrammer-ae761c1dbcfa
 "/OpenStreetMapsRendering-and-simple-routing/": https://medium.com/@satyajit.sarangi/openstreetmap-rendering-and-simple-routing-3ebd337bcb1e
+"/UdacitySelfDrivingCar_BehaviorCloning/": https://medium.com/@satyajit.sarangi/udacitys-self-driving-car-behavior-cloning-p3-55b63646dfbc
